--- a/src/patterns/structured/适配器模式.md
+++ b/src/patterns/structured/适配器模式.md
@@ -3,5 +3,103 @@ title: '适配器模式'
 ---
 
 ## 定义
+
+将一个类的接口转换成客户希望的另外一个接口，使得原本由于接口不兼容而不能一起工作的那些类能一起工作
+
+优点:
+* 客户端通过适配器可以透明地调用目标接口。
+* 复用了现存的类，程序员不需要修改原有代码而重用现有的适配者类。
+* 将目标类和适配者类解耦，解决了目标类和适配者类接口不一致的问题
+
 ## 结构
+
+### 类适配器模式
+
+![](../../resources/pattern/3-1Q1151045351c.gif)
+
+### 对象适配器模式
+
+![](../../resources/pattern/3-1Q1151046105A.gif)
+
+* 目标（Target）接口：当前系统业务所期待的接口，它可以是抽象类或接口。
+* 适配者（Adaptee）类：它是被访问和适配的现存组件库中的组件接口。
+* 适配器（Adapter）类：它是一个转换器，通过继承或引用适配者的对象，把适配者接口转换成目标接口，让客户按目标接口的格式访问适配者
+
 ## 实现
+
+### 类适配器模式
+```java
+//目标接口
+interface Target
+{
+    public void request();
+}
+//适配者接口
+class Adaptee
+{
+    public void specificRequest()
+    {       
+        System.out.println("适配者中的业务代码被调用！");
+    }
+}
+//类适配器类
+class ClassAdapter extends Adaptee implements Target
+{
+    public void request()
+    {
+        specificRequest();
+    }
+}
+//客户端代码
+public class ClassAdapterTest
+{
+    public static void main(String[] args)
+    {
+        System.out.println("类适配器模式测试：");
+        Target target = new ClassAdapter();
+        target.request();
+    }
+}
+```
+
+输出:
+
+```
+类适配器模式测试：
+适配者中的业务代码被调用！
+```
+
+### 对象适配器模式
+
+```java
+//对象适配器类
+class ObjectAdapter implements Target
+{
+    private Adaptee adaptee;
+    public ObjectAdapter(Adaptee adaptee)
+    {
+        this.adaptee=adaptee;
+    }
+    public void request()
+    {
+        adaptee.specificRequest();
+    }
+}
+//客户端代码
+public class ObjectAdapterTest
+{
+    public static void main(String[] args)
+    {
+        System.out.println("对象适配器模式测试：");
+        Adaptee adaptee = new Adaptee();
+        Target target = new ObjectAdapter(adaptee);
+        target.request();
+    }
+}
+```
+输出:
+
+```
+对象适配器模式测试：
+适配者中的业务代码被调用！
+```
