--- a/src/java/hc/多线程.md
+++ b/src/java/hc/多线程.md
@@ -34,13 +34,66 @@
 5. 死亡状态:
 	一个运行状态的线程完成任务或者其他终止条件发生时，该线程就切换到终止状态。  
 	
+### 创建线程
+#### 创建
+1. 继承Thread类
+```java
+class Thread1 extends Thread {
+    @Override
+    public void run() {
+		// to do
+    }
+}
+```
 
+2. 实现 Runnable
+
+```java
+class class2 implements Runnable{
+    @Override
+    public void run() {
+
+    }
+}
+```
+
+3. 实现 Callable
+
+```java
+class class3 implements Callable<String> {
+    @Override
+    public String call() throws Exception {
+        return null;
+    }
+}
+```
+
+#### 原理
+
+```java
+// 接受泛型参数
+@FunctionalInterface
+public interface Callable<V> {
+    V call() throws Exception;
+}
+
+@FunctionalInterface
+public interface Runnable {
+    public abstract void run();
+}
+
+// 实现 Runnable
+public class Thread implements Runnable {
+}
+```
+
+Runnable没有返回值；Callable可以返回执行结果，是个泛型，和Future、FutureTask配合可以用来获取异步执行的结果
 
 ### 线程管理
 #### 睡眠
 让当前正在执行的线程暂停一段时间，并进入阻塞状态，则可以通过调用Thread的sleep方法
 
-```
+```java
 Thread.sleep(1000*1); // 休眠1秒
 ```
 
@@ -75,7 +128,7 @@ Java 线程的优先级是一个整数，其取值范围是 1 （Thread.MIN_PRIO
 #### 同步方法
 > 由于java的每个对象都有一个内置锁，当用此关键字修饰方法时，内置锁会保护整个方法。在调用该方法前，需要获得内置锁，否则就处于阻塞状态
 
-```
+```java
 // 对象锁
 public synchronized void fun(){
 	// todo
@@ -99,7 +152,7 @@ public synchronized static void fun(){
 
 #### 同步代码块  
 
-```
+```java
 public int fun(){
     synchronized( object ) {
        //代码块，一次只能有一个线程进入
@@ -116,7 +169,7 @@ public int fun(){
 
 #### volatile
 
-```
+```java
 private volatile int account = 100;
 ```
 
@@ -127,7 +180,7 @@ private volatile int account = 100;
 
 #### 重入锁（Lock）
 
-```
+```java
 ReentrantLock() : 创建一个ReentrantLock实例         
 lock() : 获得锁        
 unlock() : 释放锁
@@ -223,7 +276,7 @@ newScheduledThreadPool()：通过该方法返回一个SheduledExecutorService的
 ### 线程池参数
 内部实现均使用了ThreadPoolExecutor实现，都是通过ThreadPoolExecutor类进行封装之后得到的，实际上就是在ThreadPoolExecutor构造函数中指定不同的参数来构造不同的线程池
 
-```
+```java
 public ThreadPoolExecutor(
 			int corePoolSize,
 			int maxnumPoolSize,
@@ -265,7 +318,7 @@ public ThreadPoolExecutor(
 
 以上内置的策略均实现了RejectedExecutionHandler接口，若仍无法满足实际需要，可以自己扩展RejectedExecutionHandler接口，通过复写rejectedExecution方法，来实现自己饿拒绝策略
 
-```
+```java
 public ThreadPoolExecutor(5,5,
     			0L,TimeUnit.MICROSECONDS,
     			new LinkedBlockingQueue<Runnable>(10),
@@ -279,7 +332,7 @@ public ThreadPoolExecutor(5,5,
 ```
 
 #### 线程池扩展
-```
+```java
 ExecutorService eService = new ThreadPoolExecutor(5,5,
 		0L,TimeUnit.MICROSECONDS,
 		new LinkedBlockingQueue<Runnable>(10),
@@ -303,7 +356,7 @@ ExecutorService eService = new ThreadPoolExecutor(5,5,
 
 #### ExecutorService有如下几个执行方法
 
-```
+```java
 - execute(Runnable)
 - submit(Runnable)
 - submit(Callable)
@@ -315,7 +368,7 @@ ExecutorService eService = new ThreadPoolExecutor(5,5,
 
    submit(Runnable)和execute(Runnable)区别是前者可以返回一个Future对象，通过返回的Future对象，我们可以检查提交的任务是否执行完毕，请看下面执行的例子：
 
-```
+```java
 Future future = executorService.submit(new Runnable() {
 public void run() {
     System.out.println("Asynchronous task");
