--- a/src/java/base/关键字.md
+++ b/src/java/base/关键字.md
@@ -30,3 +30,50 @@ title: '关键字'
 
 ### 修饰类
 当用final修改类时，该类成为最终类，无法被继承
+
+## abstract
+
+1. 抽象类不能被实例化(初学者很容易犯的错)，如果被实例化，就会报错，编译无法通过。只有抽象类的非抽象子类可以创建对象。
+2. 抽象类中不一定包含抽象方法，但是有抽象方法的类必定是抽象类。
+3. 抽象类中的抽象方法只是声明，不包含方法体，就是不给出方法的具体实现也就是方法的具体功能。
+4. 构造方法，类方法（用 static 修饰的方法）不能声明为抽象方法。
+5. 抽象类的子类必须给出抽象类中的抽象方法的具体实现，除非该子类也是抽象类
+
+### 抽象类
+
+> 如果一个类中没有包含足够的信息来描绘一个具体的对象，这样的类就是抽象类。
+
+抽象类除了不能实例化对象之外，类的其它功能依然存在，成员变量、成员方法和构造方法的访问方式和普通类一样。
+由于抽象类不能实例化对象，所以抽象类必须被继承，才能被使用
+
+```java
+public abstract class AbstractClassName{  
+}
+
+// 必须被继承
+public AbstractClassName extends ClassName {
+}
+```
+
+案例:
+```java
+abstract class Demo {
+    public static void main(String[] args) {
+        // 编译警告: 'Demo' is abstract; cannot be instantiated
+        Demo d = new Demo();
+    }
+}
+```
+
+### 抽象方法
+
+抽象方法没有定义，方法名后面直接跟一个分号，而不是花括号
+
+```java
+public abstract class AbstractClassName{
+    public abstract void method();
+}
+```
+
+* 如果一个类包含抽象方法，那么该类必须是抽象类。
+* 任何子类必须重写父类的抽象方法，或者声明自身为抽象类
